Fix minSdk 28 startup compatibility
Signed-off-by: Aqacc <aqacc@aqa.cc>